# file-search-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
css/: style.css
css2/: styles.css
file-search.exe.WebView2/EBWebView/: Local State
file-search.exe.WebView2/EBWebView/Default/: DIPS  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
file-search.exe.WebView2/EBWebView/Default/Code Cache/js/: e966b52474ef6801_0
file-search.exe.WebView2/EBWebView/Default/Code Cache/js/index-dir/: the-real-index
file-search.exe.WebView2/EBWebView/Default/Code Cache/wasm/index-dir/: the-real-index
file-search.exe.WebView2/EBWebView/Default/DawnCache/: data_1  index
file-search.exe.WebView2/EBWebView/Default/EdgeEDrop/: EdgeEDropSQLite.db
file-search.exe.WebView2/EBWebView/Default/Extension Rules/: LOG
file-search.exe.WebView2/EBWebView/Default/Extension Scripts/: LOG
file-search.exe.WebView2/EBWebView/Default/Extension State/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/Default/GPUCache/: data_0  data_1  data_2  index
file-search.exe.WebView2/EBWebView/Default/Local Storage/leveldb/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/Default/Session Storage/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/Default/Shared Dictionary/cache/index-dir/: the-real-index
file-search.exe.WebView2/EBWebView/Default/Site Characteristics Database/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/Default/Sync Data/LevelDB/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/Default/shared_proto_db/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/Default/shared_proto_db/metadata/: LOG  LOG.old
file-search.exe.WebView2/EBWebView/GrShaderCache/: data_0  data_1  f_000003  f_000004  f_000005  f_000006  index
file-search.exe.WebView2/EBWebView/GraphiteDawnCache/: data_1  index
file-search.exe.WebView2/EBWebView/ShaderCache/: data_1  index
src/: main.rs  styles.css
src/app_props/: Cargo.toml
src/app_props/src/: app.rs
src/arc_str/: Cargo.toml
src/arc_str/src/: lib.rs
src/db/: Cargo.toml
src/db/src/: database.rs  image.rs  lib.rs  semantic_vector.rs
src/file_system/: Cargo.toml
src/file_system/src/: dir_walker.rs  lib.rs
src/image_to_text/: Cargo.toml
src/image_to_text/src/: lib.rs  processor.rs
src/img_azure/: Cargo.toml
src/img_azure/src/: azure_api.rs  lib.rs
src/text_to_vec/: Cargo.toml
src/trie/: Cargo.toml
src/trie/src/: arc_str.rs  lib.rs  node.rs  trie.rs
src/ui_facade/: Cargo.toml
src/ui_facade/src/: lib.rs
src/vectorization/: Cargo.toml
src/vectorization/src/: lib.rs
test_photo/l1/l2/: l1.lnk
