workspace = { members = ["src/file_system", "src/trie"] }
[package]
name = "file-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_system = { path = "src/file_system" }
num_cpus = "1.13.0"
trie = { path = "src/trie" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"