workspace = { members = [ "src/db","src/file_system", "src/image_to_text", "src/text_to_vec", "src/trie"] }
[package]
name = "file-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_system = { path = "src/file_system" }
num_cpus = "1.13.0"
trie = { path = "src/trie" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
dioxus = { version = "0.4.0" }
dioxus-desktop = { version = "0.4.0" }
image_to_text = { path = "src/image_to_text" }
text_to_vec = { path = "src/text_to_vec" }
tokio = "1.37.0"
serde_json = "1.0.115"
trie-rs = "0.2.0"
once_cell = "1.19.0"
rayon = "1.5.1"
db = { path = "src/db" }