workspace = { members = [ "src/app_props", "src/db","src/file_system", "src/img_azure", "src/arc_str", "src/vectorization", "src/ui_facade"] }
[package]
name = "file-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
file_system = { path = "src/file_system" }

dioxus = { version = "0.4.0" }
dioxus-desktop = { version = "0.4.0" }
serde_json = "1.0.115"
trie-rs = "0.2.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

manganis = "0.2.2"
ui_facade = { path = "src/ui_facade" }
app_props = { path = "src/app_props" }
image = "0.25.1"


