[package]
name = "file_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
futures = "0.3.17"
governor = "0.6.3"
reqwest = { version = "0.12.3", features = ["json"] }
img_azure = { path = "../img_azure" }
serde_json = "1.0.115"
tokio = "1.37.0"
db = { path = "../db"}