[package]
name = "image_to_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
base64 = "0.22.0"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
yup-oauth2 = "8.3.3"
futures = "0.3.30"