[package]
name = "img_azure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
futures = "0.3.17"
governor = "0.6.3"